--- a/layout.html
+++ b/layout.html
@@ -21,19 +21,21 @@
 	<h2>Quiz: crazy questions</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
-		<span><a href='layout.html'>Home</a></span>
-		<span><a href='/quizzes'>Quizzes</a></span>
-		<span><a href='/author'>Credits</a></span>
+		<span>Home</span>
+		<span>Quizzes</span>
+		<span><a href="addQuestions.html">Add question</a></span>
+		<span><a href="addQuestions_HTML5.html">Add question (html5)</a></span>
+		<span><a href="credits.html">Credits</a></span>
 	</nav>
     <section class="main" id="s1">
-    
+  
 	
 	<div>
 	Quizzes and credits will be displayed in this spot in future laboratories ...
 	</div>
     </section>
 	<footer class='main' id='f1'>
-		 <a href='https://github.com'>Link GITHUB</a>
+		 <a href='https://github.com/zmutu/lab2.git'>Link GITHUB</a>
 	</footer>
 </div>
 </body>
