--- a/addQuestions.html
+++ b/addQuestions.html
@@ -36,10 +36,17 @@ function aztertu(){
 
 	return true;
 }
-function fitxategiNeurria(){
+function fitxategi(){
 
-	$("#neurri").text("fitxategiaren neurria: "+$("#img")[0].files[0].size+" byte");
-	
+	var $img = $("#img")[0].files[0];
+	$("#neurri").text("fitxategiaren neurria: "+$img.size+" byte");
+	if($img){
+		var FR = new FileReader();
+		FR.readAsDataURL($img);
+		FR.onload=function(e){
+			document.getElementById("marrazkia").src=e.target.result;//jQueryrekin ez dut lortzen
+		}		
+	}
 }
 </script>
 </head>
@@ -57,8 +64,9 @@ function fitxategiNeurria(){
 	<p>
 		<label>Zailtasuna(*): <INPUT TYPE=text NAME=zailtasuna id="zailtasuna"></label><br/>
 		<label>Gaia(*): <INPUT TYPE=text NAME=gaia id="gaia"></label><br/>
-		<label>Argazkia: <INPUT TYPE=file NAME="html_file" ACCEPT="text/html" id="img" onchange="fitxategiNeurria()"></label><br/>
-		<span id="neurri"></span>
+		<label>Argazkia: <INPUT TYPE=file NAME="html_file" ACCEPT="text/html" id="img" onchange="fitxategi()"></label><br/>
+		<span id="neurri"></span><br/>
+		<img src="" id="marrazkia"/>
 	</p>
 	<p>
 		<button type="reset" value="garbitu">Garbitu</button>
