--- a/addQuestions.html
+++ b/addQuestions.html
@@ -44,7 +44,7 @@ function fitxategi(){
 		var FR = new FileReader();
 		FR.readAsDataURL($img);
 		FR.onload=function(e){
-			document.getElementById("marrazkia").src=e.target.result;//jQueryrekin ez dut lortzen
+			document.getElementById("marrazkia").src=e.target.result;/*jQueryrekin ez dut lortzen*/
 		}		
 	}
 }
