--- a/addQuestions_HTML5.html
+++ b/addQuestions_HTML5.html
@@ -9,36 +9,43 @@
 -->
 <script src="js/jquery-3.2.1.js" type="text/javascript"></script>
 <script>
-function fitxategiNeurria(){
-
-	$("#neurri").text("fitxategiaren neurria: "+$("#img")[0].files[0].size+" byte");
-	
+function fitxategi(){
+	var $img = $("#img")[0].files[0];
+	$("#neurri").text("fitxategiaren neurria: "+$img.size+" byte");
+	if($img){
+		var FR = new FileReader();
+		FR.readAsDataURL($img);
+		FR.onload=function(e){
+			$("#marrazkia").attr("src",e.target.result);
+		}
+	}
 }
 </script>
 </head>
 <body>
-<form id="galderenF" name="galderenF" action="php/proba.php">
-<fieldset>
-  <p><label ACCESSKEY=M>Mail(*): <INPUT TYPE="mail" NAME=mail id="mail" pattern="\w\w[a-z]*\d\d\d@ikasle.ehu.eus$" required></label></p>
-	<p>
-    <label>Galdera: <INPUT TYPE="text" NAME=galdera id="galdera" minlength="10" required></label><br/>
-    <label>Erantzun zuzena (*): <INPUT TYPE="text" NAME=zuzena id="eZuzen" size="20" required></label><br/>
-    <label>Erantzun okerra 1 (*): <INPUT TYPE="text" NAME=erantzunokerra1 id="eOker1" required></label><br/>
-    <label>Erantzun okerra 2 (*): <INPUT TYPE="text" NAME=erantzunokerra2 id="eOker2" required></label><br/>
-    <label>Erantzun okerra 3 (*): <INPUT TYPE="text" NAME=erantzunokerra3 id="eOker3" required></label><br/>
-  </P>
-	<p>
-		<label>Zailtasuna(*): <INPUT TYPE="number" NAME=zailtasuna id="zailtasuna" min="0" max="5" required></label><br/>
-		<label>Gaia(*): <INPUT TYPE="text" NAME=gaia id="gaia" required></label><br/>
-		<label>Argazkia: <INPUT TYPE=file NAME="html_file" ACCEPT="text/html" id="img" onchange="fitxategiNeurria()"></label><br/>
-		<span id="neurri" style="color:darkblue;font-weight:bold;"></span>
-	</p>
-	<p>
-		<button type="reset" value="garbitu">Garbitu</button>
-		<button type="submit" value="bidali">Bidali</button>
-	</p>
-</fieldset>
-</form>
+	<form id="galderenF" name="galderenF" action="php/proba.php">
+		<fieldset>
+			<p><label ACCESSKEY=M>Mail(*): <INPUT TYPE="mail" NAME=mail id="mail" pattern="\w\w[a-z]*\d\d\d@ikasle.ehu.eus$" required></label></p>
+			<p>
+				<label>Galdera: <INPUT TYPE="text" NAME=galdera id="galdera" minlength="10" required></label><br/>
+				<label>Erantzun zuzena (*): <INPUT TYPE="text" NAME=zuzena id="eZuzen" size="20" required></label><br/>
+				<label>Erantzun okerra 1 (*): <INPUT TYPE="text" NAME=erantzunokerra1 id="eOker1" required></label><br/>
+				<label>Erantzun okerra 2 (*): <INPUT TYPE="text" NAME=erantzunokerra2 id="eOker2" required></label><br/>
+				<label>Erantzun okerra 3 (*): <INPUT TYPE="text" NAME=erantzunokerra3 id="eOker3" required></label><br/>
+			</P>
+			<p>
+				<label>Zailtasuna(*): <INPUT TYPE="number" NAME=zailtasuna id="zailtasuna" min="0" max="5" required></label><br/>
+				<label>Gaia(*): <INPUT TYPE="text" NAME=gaia id="gaia" required></label><br/>
+				<label>Argazkia: <INPUT TYPE=file NAME="html_file" ACCEPT="text/html" id="img" onchange="fitxategi()"></label><br/>
+				<span id="neurri" style="color:darkblue;font-weight:bold;"></span>
+				<img src="" id="marrazkia"/>
+			</p>
+			<p>
+				<button type="reset" value="garbitu">Garbitu</button>
+				<button type="submit" value="bidali">Bidali</button>
+			</p>
+		</fieldset>
+	</form>
 <a href="layout.html"><img src="images/gezia.png"/></a>
 </body>
 </html>
