--- a/addQuestions.html
+++ b/addQuestions.html
@@ -62,7 +62,7 @@ function fitxategi(){
 				<label>Zailtasuna(*): <INPUT TYPE=text NAME=zailtasuna id="zailtasuna"></label><br/>
 				<label>Gaia(*): <INPUT TYPE=text NAME=gaia id="gaia"></label><br/>
 				<label>Argazkia: <INPUT TYPE=file NAME="html_file" ACCEPT="text/html" id="img" onchange="fitxategi()"></label><br/>
-				<span id="neurri"></span><br/>
+				<span id="neurri" style="color:darkblue;font-weight:bold;"></span><br/>
 				<img src="" id="marrazkia"/>
 			</p>
 			<p>
