--- a/addQuestions.html
+++ b/addQuestions.html
@@ -10,7 +10,7 @@
 <script>
 function aztertu(){
 
-	var expReg = new RegExp(/\w\w[a-z]*\d\d\d@ikasle.ehu.eus$/);
+	var expReg = new RegExp(/\w\w[a-z]*\d\d\d@ikasle\.ehu\.eus$/);
 
 	var mail=$("#mail").val();
 	var galdera=$("#galdera").val();
