--- a/layout.html
+++ b/layout.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="tipo_contenido" content="text/html;" http-equiv="content-type" charset="utf-8">
@@ -12,6 +12,59 @@
 		   type='text/css' 
 		   media='only screen and (max-width: 480px)'
 		   href='styles/smartphone.css' />
+	<title>Lab 2, Formularioa</title>
+	<!--
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
+	-->
+	<script src="../js/jquery.js" type="text/javascript"></script>
+	<script>
+	function fitxategi(){
+		var $img = $("#img")[0].files[0];
+		$("#neurri").text("fitxategiaren neurria: "+$img.size+" byte");
+		if($img){
+			var FR = new FileReader();
+			FR.readAsDataURL($img);
+			FR.onload=function(e){
+				$("#marrazkia").attr("src",e.target.result);
+			}
+		}
+	}
+	function garbitu(){
+		$("#marrazkia").attr("src","");
+		$("#neurri").html("");
+	}
+	$(document).ready(function(){
+		$("#galderenF").submit(function(ev){
+
+			var expReg = new RegExp(/\w\w[a-z]*\d\d\d@ikasle.ehu.eus$/);
+
+			var mail=$("#mail").val();
+			var galdera=$("#galdera").val();
+			var eZuzen=$("#eZuzen").val();
+			var eOker1=$("#eOker1").val();
+			var eOker2=$("#eOker2").val();
+			var eOker3=$("#eOker3").val();
+			var zailtasuna=$("#zailtasuna").val();
+			var gaia=$("#gaia").val();
+
+			var ml = expReg.test(mail);
+			
+			//gehiegizko espazioak kentzeko. ez dakit ze egoera gehio aztertu
+			galdera = galdera.replace(/([\ \t]+(?=[\ \t])|^\s+|\s+$)/g, '');
+			
+			if(mail==""||ml==false){alert('[ERROR] \"Mail\" zuzendu behar da');return false;}
+			if(galdera==""||galdera.length<10){alert('[ERROR] \"galdera\" eremuan gutxieneko luzera 10 da');return false;}
+			if(eZuzen==""){alert('[ERROR] \"Erantzun zuzena\" ezin da hutsik egon');return false;}
+			if(eOker1==""){alert('[ERROR] \"Erantzun okerra 1\" ezin da hutsik egon');return false;}
+			if(eOker2==""){alert('[ERROR] \"Erantzun okerra 2\" ezin da hutsik egon');return false;}
+			if(eOker3==""){alert('[ERROR] \"Erantzun okerra 3\" ezin da hutsik egon');return false;}
+			if(isNaN(zailtasuna) || zailtasuna > 5 || zailtasuna < 0){alert('[ERROR] Zailtasuna 0 - 5 tartean egon behar du');return false;}
+			if(gaia==""){alert('[ERROR] \"Gaia\" eremua ezin da hutsik egon');return false;}
+
+			return true;
+		});
+	});
+	</script>
   </head>
   <body>
   <div id='page-wrap'>
@@ -21,21 +74,23 @@
 	<h2>Quiz: crazy questions</h2>
     </header>
 	<nav class='main' id='n1' role='navigation'>
-		<span>Home</span>
-		<span>Quizzes</span>
+		<span><a href='layout.html'>Home</a></span>
+		<span><a href='/quizzes'>Quizzes</a></span>
+		<span><a href='/author'>Credits</a></span>
 		<span><a href="addQuestions.html">Add question</a></span>
 		<span><a href="addQuestions_HTML5.html">Add question (html5)</a></span>
+		<span><a href="php/showQuestions.php">galdera zerrenda</a></span>
 		<span><a href="credits.html">Credits</a></span>
 	</nav>
     <section class="main" id="s1">
-  
+    
 	
 	<div>
 	Quizzes and credits will be displayed in this spot in future laboratories ...
 	</div>
     </section>
 	<footer class='main' id='f1'>
-		 <a href='https://github.com/zmutu/lab2.git'>Link GITHUB</a>
+		 <a href='https://github.com'>Link GITHUB</a>
 	</footer>
 </div>
 </body>
