--- a/addQuestions_HTML5.html
+++ b/addQuestions_HTML5.html
@@ -4,28 +4,34 @@
 <meta charset="UTF-8">
 <title>Lab 2, HTML5 Formularioa</title>
 <style>input:invalid{border:1px solid red;}</style>
-<!--
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
+<!--
+<script src="../js/jquery.js" type="text/javascript"></script>
 -->
-<script src="js/jquery-3.2.1.js" type="text/javascript"></script>
 <script>
 function fitxategi(){
 	var $img = $("#img")[0].files[0];
 	$("#neurri").text("fitxategiaren neurria: "+$img.size+" byte");
 	if($img){
-		var FR = new FileReader();/*fitxategi bat irakurtzeko objetua  sortu*/
+		var FR = new FileReader();/*fitxategi bat irakurtzeko objetua sortu*/
 		FR.readAsDataURL($img);/*fitxategiaren edukia irakurri*/
 		FR.onload=function(e){/*fitxategi guztia irakurtu ondoren...*/
 			$("#marrazkia").attr("src",e.target.result);/*'img' objetuaren 'src' propietateari esleitu*/
 		}
 	}
 }
+function garbitu(){
+	$("#marrazkia").attr("src","");
+	$("#neurri").html("");
+}
 </script>
 </head>
 <body>
-	<form id="galderenF" name="galderenF" action="php/proba.php">
+	<h3>Marrazkiak bidalteko erabiliko den formularioa metod=POST</h3>
+	<h4>Hori dela eta, 'addQuestions.php' fitxategiak ez du daturik jasoko</h4>
+	<form id="galderenF" name="galderenF" enctype="multipart/form-data" onreset="garbitu()" method="post" action="php/addQuestion.php">
 		<fieldset>
-			<p><label>Mail(*): <INPUT TYPE="mail" NAME=mail id="mail" pattern="\w\w[a-z]*\d\d\d@ikasle.ehu.eus$" required></label></p>
+			<p><label>Mail(*): <INPUT TYPE="mail" NAME="mail" id="mail" pattern="\w\w[a-z]*\d\d\d@ikasle.ehu.eus$" required></label></p>
 			<p>
 				<label>Galdera: <INPUT TYPE="text" NAME="galdera" id="galdera" minlength="10" required></label><br/>
 				<label>Erantzun zuzena (*): <INPUT TYPE="text" NAME="zuzena" id="eZuzen" size="20" required></label><br/>
@@ -34,9 +40,9 @@ function fitxategi(){
 				<label>Erantzun okerra 3 (*): <INPUT TYPE="text" NAME="erantzunokerra3" id="eOker3" required></label><br/>
 			</P>
 			<p>
-				<label>Zailtasuna(*): <INPUT TYPE="number" NAME=zailtasuna id="zailtasuna" min="0" max="5" required></label><br/>
-				<label>Gaia(*): <INPUT TYPE="text" NAME=gaia id="gaia" required></label><br/>
-				<label>Argazkia: <INPUT TYPE=file NAME="html_file" ACCEPT="text/html" id="img" onchange="fitxategi()"></label><br/>
+				<label>Zailtasuna(*): <INPUT TYPE="number" NAME="zailtasuna" id="zailtasuna" min="0" max="5" required></label><br/>
+				<label>Gaia(*): <INPUT TYPE="text" NAME="gaia" id="gaia" required></label><br/>
+				<label>Argazkia: <INPUT TYPE="file" NAME="html_file" ACCEPT="text/html" id="img" onchange="fitxategi()"></label><br/>
 				<span id="neurri" style="color:darkblue;font-weight:bold;"></span><br/>
 				<img src="" id="marrazkia"/>
 			</p>
@@ -46,6 +52,6 @@ function fitxategi(){
 			</p>
 		</fieldset>
 	</form>
-<a href="layout.html"><img src="images/gezia.png"/></a>
+<a href="layout.html"><img src="../images/gezia.png"/></a>
 </body>
 </html>
