--- a/addQuestions.html
+++ b/addQuestions.html
@@ -26,7 +26,7 @@ function garbitu(){
 $(document).ready(function(){
 	$("#galderenF").submit(function(ev){
 
-		var expReg = new RegExp(/\w\w[a-z]*\d\d\d@ikasle.ehu.eus$/);
+		var expReg = new RegExp(/\w\w[a-z]*\d\d\d@ikasle\.ehu\.eus$/);
 
 		var mail=$("#mail").val();
 		var galdera=$("#galdera").val();
