lab2 a erroko fitxategiak bidali

--- a/addQuestions_HTML5.html
+++ b/addQuestions_HTML5.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Lab 2, HTML5 Formularioa</title>
+<link rel="icon" type="image/png" href="images/fabikon.png" />
 <style>input:invalid{border:1px solid red;}</style>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
 <!--
-<script src="../js/jquery.js" type="text/javascript"></script>
+<script src="js/jquery.js" type="text/javascript"></script>
 -->
 <script>
 function fitxategi(){
