--- a/addQuestions.html
+++ b/addQuestions.html
@@ -3,9 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Lab 2, Formularioa</title>
+<link rel='stylesheet' type='text/css' href='styles/style.css' />
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
 <!--
-<script src="../js/jquery.js" type="text/javascript"></script>
+<script src="js/jquery.js" type="text/javascript"></script>
 -->
 <script>
 function fitxategi(){
@@ -80,6 +81,6 @@ $(document).ready(function(){
 			</p>
 		</fieldset>
 	</form>
-<a href="layout.html"><img src="../images/gezia.png"/></a>
+<a href="layout.html"><img src="images/gezia.png"/></a>
 </body>
 </html>
