--- a/addQuestions_HTML5.html
+++ b/addQuestions_HTML5.html
@@ -7,7 +7,7 @@
 <style>input:invalid{border:1px solid red;}</style>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript"></script>
 <!--
-<script src="js/jquery.js" type="text/javascript"></script>
+<script src="../js/jquery.js" type="text/javascript"></script>
 -->
 <script>
 function fitxategi(){
@@ -28,9 +28,8 @@ function garbitu(){
 </script>
 </head>
 <body>
-	<h3>Marrazkiak bidalteko erabiliko den formularioa metod=POST</h3>
-	<h4>Hori dela eta, 'addQuestions.php' fitxategiak ez du daturik jasoko</h4>
-	<form id="galderenF" name="galderenF" enctype="multipart/form-data" onreset="garbitu()" method="post" action="php/addQuestion.php">
+	<h3>Marrazkiak bidalteko erabiliko den formularioa 'metod=POST'</h3>
+	<form id="galderenF" name="galderenF" enctype="multipart/form-data" onreset="garbitu()" method="post" action="php/addQuestionwithImage.php">
 		<fieldset>
 			<p><label>Mail(*): <INPUT TYPE="mail" NAME="mail" id="mail" pattern="\w\w[a-z]*\d\d\d@ikasle.ehu.eus$" required></label></p>
 			<p>
@@ -53,6 +52,6 @@ function garbitu(){
 			</p>
 		</fieldset>
 	</form>
-<a href="layout.html"><img src="../images/gezia.png"/></a>
+<a href="layout.html"><img src="images/gezia.png"/></a>
 </body>
 </html>
