--- a/layout.html
+++ b/layout.html
@@ -29,9 +29,11 @@
 		<span><a href='layout.html'>Home</a></span>
 		<span><a href='/quizzes'>Quizzes</a></span>
 		<span><a href='/author'>Credits</a></span>
-		<span><a href="addQuestions.html">Add question</a></span>
-		<span><a href="addQuestions_HTML5.html">Add question (html5)</a></span>
+		<span><a href="addQuestion.html">Add question</a></span>
+		<span><a href="addQuestion_HTML5.html">Add question (html5)</a></span>
 		<span><a href="php/showQuestions.php">galdera zerrenda</a></span>
+		<span><a href="addQuestionwithImage.html">Sartu galdera marrazkiarekin</a></span>
+		<span><a href="php/showQuestionswithImage.php">Ikusi galderak marrazkiekin</a></span>
 		<span><a href="credits.html">Credits</a></span>
 	</nav>
     <section class="main" id="s1">
