'lab2 b' entrega (bigarrena) showQuestionswithImage.php ez zegoen ongi. Bestak egokituta daude

--- a/layout.html
+++ b/layout.html
@@ -32,7 +32,7 @@
 		<span><a href="addQuestion.html">Add question</a></span>
 		<span><a href="addQuestion_HTML5.html">Add question (html5)</a></span>
 		<span><a href="php/showQuestions.php">galdera zerrenda</a></span>
-		<span><a href="addQuestionwithImage.html">Sartu galdera marrazkiarekin</a></span>
+		<span><a href="addQuestion_HTML5.html">Sartu galdera marrazkiarekin</a></span>
 		<span><a href="php/showQuestionswithImage.php">Ikusi galderak marrazkiekin</a></span>
 		<span><a href="credits.html">Credits</a></span>
 	</nav>
